--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_background_service: ^5.1.0
   flutter_local_notifications: ^18.0.1
   flutter_native_splash: ^2.4.3
+  flutter_secure_storage: ^9.2.2
   android_package_manager: ^0.7.1
   device_info_plus: ^10.1.0
   hive: ^2.2.3
